Unit test addition